--- a/contrib/gitian-descriptors/gitian-linux.yml
+++ b/contrib/gitian-descriptors/gitian-linux.yml
@@ -1,11 +1,12 @@
 ---
 name: "zcash-1.0.0-rc1"
 enable_cache: true
+distro: "debian"
 suites:
 - "jessie"
 architectures:
 - "amd64"
-packages: 
+packages:
 - "autoconf"
 - "automake"
 - "bsdmainutils"
